[gd_scene load_steps=6 format=3 uid="uid://bepakscdhqydc"]

[ext_resource type="Script" uid="uid://dygi3svqd6pro" path="res://scripts/ship.gd" id="1_cvfwu"]
[ext_resource type="Texture2D" uid="uid://bniyrxn3r2v8h" path="res://assets/ship.png" id="1_fnwwl"]
[ext_resource type="PackedScene" uid="uid://dgf54k70yiiff" path="res://assets/ship/main_thruster/main_thruster.tscn" id="3_l53a2"]
[ext_resource type="PackedScene" uid="uid://bklom8bhpxg4h" path="res://assets/ship/side_thruster/side_thruster.tscn" id="4_gt1mf"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_l53a2"]
points = PackedVector2Array(-1.70474e-06, -39, 21, -15, 44, 10, 26, 37, -27, 36, -45, 12, -22, -15)

[node name="Ship" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_cvfwu")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
rotation = 1.5708
shape = SubResource("ConvexPolygonShape2D_l53a2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fnwwl")
metadata/_edit_lock_ = true

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BoostCooldown" type="Timer" parent="."]
wait_time = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="MainThruster" parent="." instance=ExtResource("3_l53a2")]
position = Vector2(-32, 0)
scale = Vector2(0.895368, 1)
points = PackedVector2Array(0, 0, 33.3333, 0, 66.6667, 0)
metadata/_edit_lock_ = true

[node name="SideThruster" parent="." instance=ExtResource("4_gt1mf")]
position = Vector2(-44, -20)
rotation = 1.93224
metadata/_edit_lock_ = true

[node name="SideThruster2" parent="." instance=ExtResource("4_gt1mf")]
position = Vector2(-44, 20)
rotation = 1.29118
metadata/_edit_lock_ = true

[node name="BulletContainer" type="Node" parent="."]

[node name="FireTimer" type="Timer" parent="."]

[node name="BulletSpawn" type="Node2D" parent="."]
modulate = Color(0.952941, 0.415686, 0.0156863, 1)
position = Vector2(55, 0)
scale = Vector2(62.3982, -8.0048)

[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="BoostCooldown" to="." method="_on_boost_cooldown_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
